removed masonry removed imagesloaded added salvattore removed loader added / updated css for plugin swap fixed height issue with image grid items on safari ( why was min-height even present in the first place? ) rewrote css for vertical alignment of item-meta children

--- a/public/css/hover-effect.css
+++ b/public/css/hover-effect.css
@@ -35,7 +35,7 @@
 .grid figure img {
   position: relative;
   display: block;
-  min-height: 100%;
+  /*min-height: 100%;*/
   max-width: 100%;
   opacity: 1.0;
 }
